// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autosuggest rendering should initially render empty component correctly 1`] = `
<Autosuggest
  allowMixingSuggestionsAndLoading={false}
  inputAttrs={Object {}}
  inputPlaceholder="type here..."
  isLoading={false}
  noSuggestionsPlaceholder=""
  numberOfVisibleTags={3}
  onBlur={[MockFunction]}
  onInputValueChange={[MockFunction]}
  onSelectionAdd={[MockFunction]}
  onSelectionRemove={[MockFunction]}
  onSubmit={null}
  selectedSuggestions={Array []}
  suggestionToKey={null}
  suggestionToString={[Function]}
  suggestions={Array []}
  useOptimizeListRender={false}
>
  <SelectBase
    blurredRenderer={[Function]}
    clearInputAfterSelection={true}
    focusedRenderer={[Function]}
    highlightOnEmptyInput={false}
    inputRef={
      Object {
        "current": <input
          aria-autocomplete="list"
          aria-labelledby="downshift-0-label"
          autocomplete="off"
          class="Autosuggest__input"
          data-lpignore="true"
          placeholder="type here..."
          value=""
        />,
      }
    }
    keepExpandedAfterSelection={true}
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onInputValueChange={[Function]}
    onSelectionAdd={[MockFunction]}
    selectOnTab={true}
    suggestionToString={[Function]}
    suggestions={Array []}
  >
    <div
      className="SelectBase"
    >
      <Downshift
        defaultHighlightedIndex={-1}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue=""
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          aria-owns={null}
          className="SelectBase__main"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearLabel=""
            isArrowUp={false}
            isFocused={false}
            onClear={[Function]}
            onClick={[Function]}
            showArrow={false}
            showClearButton={false}
          >
            <div
              className="FieldWrapper SelectBase__field"
              onClick={[Function]}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  className="Autosuggest__wrapper"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-controls={null}
                    aria-labelledby="downshift-0-label"
                    autoComplete="off"
                    className="Autosuggest__input"
                    data-lpignore={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="type here..."
                    value=""
                  />
                </div>
                <List
                  aria-labelledby="downshift-0-label"
                  id="downshift-0-menu"
                  isControlledNavigation={true}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-0-label"
                    className="List"
                    id="downshift-0-menu"
                    role="listbox"
                  />
                </List>
              </div>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</Autosuggest>
`;

exports[`Autosuggest rendering should initially render focused component correctly 1`] = `
<Autosuggest
  allowMixingSuggestionsAndLoading={false}
  inputAttrs={Object {}}
  inputPlaceholder="type here..."
  isLoading={false}
  noSuggestionsPlaceholder=""
  numberOfVisibleTags={3}
  onBlur={[MockFunction]}
  onInputValueChange={[MockFunction]}
  onSelectionAdd={[MockFunction]}
  onSelectionRemove={[MockFunction]}
  onSubmit={null}
  selectedSuggestions={Array []}
  suggestionToKey={null}
  suggestionToString={[Function]}
  suggestions={Array []}
  useOptimizeListRender={false}
>
  <SelectBase
    blurredRenderer={[Function]}
    clearInputAfterSelection={true}
    focusedRenderer={[Function]}
    highlightOnEmptyInput={false}
    inputRef={
      Object {
        "current": <input
          aria-autocomplete="list"
          aria-controls="downshift-2-menu"
          aria-labelledby="downshift-2-label"
          autocomplete="off"
          class="Autosuggest__input"
          data-lpignore="true"
          placeholder="type here..."
          value=""
        />,
      }
    }
    keepExpandedAfterSelection={true}
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onInputValueChange={[Function]}
    onSelectionAdd={[MockFunction]}
    selectOnTab={true}
    suggestionToString={[Function]}
    suggestions={Array []}
  >
    <div
      className="SelectBase"
    >
      <Downshift
        defaultHighlightedIndex={-1}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue=""
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-labelledby="downshift-2-label"
          aria-owns="downshift-2-menu"
          className="SelectBase__main SelectBase__main--focused"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearLabel=""
            isArrowUp={true}
            isFocused={true}
            onClear={[Function]}
            onClick={[Function]}
            showArrow={false}
            showClearButton={false}
          >
            <div
              className="FieldWrapper FieldWrapper--isFocused SelectBase__field"
              onClick={[Function]}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  className="Autosuggest__wrapper Autosuggest__wrapper--isFocused"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-controls="downshift-2-menu"
                    aria-labelledby="downshift-2-label"
                    autoComplete="off"
                    className="Autosuggest__input"
                    data-lpignore={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="type here..."
                    value=""
                  />
                </div>
                <List
                  aria-labelledby="downshift-2-label"
                  className="SelectBase__list--focused"
                  id="downshift-2-menu"
                  isControlledNavigation={true}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-2-label"
                    className="List SelectBase__list--focused"
                    id="downshift-2-menu"
                    role="listbox"
                  />
                </List>
              </div>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</Autosuggest>
`;

exports[`Autosuggest rendering should initially render focused component with suggestions list correctly 1`] = `
<Autosuggest
  allowMixingSuggestionsAndLoading={false}
  inputAttrs={Object {}}
  inputPlaceholder="type here..."
  isLoading={false}
  noSuggestionsPlaceholder=""
  numberOfVisibleTags={3}
  onBlur={[MockFunction]}
  onInputValueChange={[MockFunction]}
  onSelectionAdd={[MockFunction]}
  onSelectionRemove={[MockFunction]}
  onSubmit={null}
  selectedSuggestions={Array []}
  suggestionToKey={null}
  suggestionToString={[Function]}
  suggestions={
    Array [
      Object {
        "name": "Sun",
      },
      Object {
        "name": "Moon",
      },
      Object {
        "name": "Mercury",
      },
      Object {
        "name": "Venus",
      },
      Object {
        "name": "Earth",
      },
      Object {
        "name": "Mars",
      },
      Object {
        "name": "Jupiter",
      },
      Object {
        "name": "Saturn",
      },
    ]
  }
  useOptimizeListRender={false}
>
  <SelectBase
    blurredRenderer={[Function]}
    clearInputAfterSelection={true}
    focusedRenderer={[Function]}
    highlightOnEmptyInput={false}
    inputRef={
      Object {
        "current": <input
          aria-autocomplete="list"
          aria-controls="downshift-4-menu"
          aria-labelledby="downshift-4-label"
          autocomplete="off"
          class="Autosuggest__input"
          data-lpignore="true"
          placeholder="type here..."
          value=""
        />,
      }
    }
    keepExpandedAfterSelection={true}
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onInputValueChange={[Function]}
    onSelectionAdd={[MockFunction]}
    selectOnTab={true}
    suggestionToString={[Function]}
    suggestions={
      Array [
        Object {
          "name": "Sun",
        },
        Object {
          "name": "Moon",
        },
        Object {
          "name": "Mercury",
        },
        Object {
          "name": "Venus",
        },
        Object {
          "name": "Earth",
        },
        Object {
          "name": "Mars",
        },
        Object {
          "name": "Jupiter",
        },
        Object {
          "name": "Saturn",
        },
      ]
    }
  >
    <div
      className="SelectBase"
    >
      <Downshift
        defaultHighlightedIndex={-1}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue=""
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-labelledby="downshift-4-label"
          aria-owns="downshift-4-menu"
          className="SelectBase__main SelectBase__main--focused"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearLabel=""
            isArrowUp={true}
            isFocused={true}
            onClear={[Function]}
            onClick={[Function]}
            showArrow={false}
            showClearButton={false}
          >
            <div
              className="FieldWrapper FieldWrapper--isFocused SelectBase__field"
              onClick={[Function]}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  className="Autosuggest__wrapper Autosuggest__wrapper--isFocused"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-controls="downshift-4-menu"
                    aria-labelledby="downshift-4-label"
                    autoComplete="off"
                    className="Autosuggest__input"
                    data-lpignore={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="type here..."
                    value=""
                  />
                </div>
                <List
                  aria-labelledby="downshift-4-label"
                  className="SelectBase__list--focused"
                  id="downshift-4-menu"
                  isControlledNavigation={true}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-4-label"
                    className="List SelectBase__list--focused"
                    id="downshift-4-menu"
                    role="listbox"
                  >
                    <SuggestionsList
                      allowMixingSuggestionsAndLoading={false}
                      className="List__item"
                      getItemProps={[Function]}
                      highlightedIndex={-1}
                      inputValue=""
                      isLoading={false}
                      key=".0"
                      noSuggestionsPlaceholder=""
                      passDisabledToListItems={true}
                      suggestionToKey={null}
                      suggestionToString={[Function]}
                      suggestions={
                        Array [
                          Object {
                            "name": "Sun",
                          },
                          Object {
                            "name": "Moon",
                          },
                          Object {
                            "name": "Mercury",
                          },
                          Object {
                            "name": "Venus",
                          },
                          Object {
                            "name": "Earth",
                          },
                          Object {
                            "name": "Mars",
                          },
                          Object {
                            "name": "Jupiter",
                          },
                          Object {
                            "name": "Saturn",
                          },
                        ]
                      }
                      useOptimizeRender={false}
                    >
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-4-item-0"
                        isHighlighted={false}
                        key="Sun"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-4-item-0"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Sun
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-4-item-1"
                        isHighlighted={false}
                        key="Moon"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-4-item-1"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Moon
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-4-item-2"
                        isHighlighted={false}
                        key="Mercury"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-4-item-2"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Mercury
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-4-item-3"
                        isHighlighted={false}
                        key="Venus"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-4-item-3"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Venus
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-4-item-4"
                        isHighlighted={false}
                        key="Earth"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-4-item-4"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Earth
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-4-item-5"
                        isHighlighted={false}
                        key="Mars"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-4-item-5"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Mars
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-4-item-6"
                        isHighlighted={false}
                        key="Jupiter"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-4-item-6"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Jupiter
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-4-item-7"
                        isHighlighted={false}
                        key="Saturn"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-4-item-7"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Saturn
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                    </SuggestionsList>
                  </ul>
                </List>
              </div>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</Autosuggest>
`;

exports[`Autosuggest rendering should render component with suggestions 1`] = `
<Autosuggest
  allowMixingSuggestionsAndLoading={false}
  inputAttrs={Object {}}
  inputPlaceholder="type here..."
  isLoading={false}
  noSuggestionsPlaceholder=""
  numberOfVisibleTags={3}
  onBlur={[MockFunction]}
  onInputValueChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "driver",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onSelectionAdd={[MockFunction]}
  onSelectionRemove={[MockFunction]}
  onSubmit={null}
  selectedSuggestions={Array []}
  suggestionToKey={null}
  suggestionToString={[Function]}
  suggestions={
    Array [
      Object {
        "name": "Moon",
      },
      Object {
        "name": "Mercury",
      },
      Object {
        "name": "Venus",
      },
      Object {
        "name": "Earth",
      },
      Object {
        "name": "Mars",
      },
      Object {
        "name": "Jupiter",
      },
      Object {
        "name": "Saturn",
      },
      Object {
        "name": "Neptune",
      },
      Object {
        "disabled": true,
        "name": "Pluto",
      },
    ]
  }
  useOptimizeListRender={false}
>
  <SelectBase
    blurredRenderer={[Function]}
    clearInputAfterSelection={true}
    focusedRenderer={[Function]}
    highlightOnEmptyInput={false}
    inputRef={
      Object {
        "current": <input
          aria-activedescendant="downshift-5-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-5-menu"
          aria-labelledby="downshift-5-label"
          autocomplete="off"
          class="Autosuggest__input"
          data-lpignore="true"
          placeholder="type here..."
          value="driver"
        />,
      }
    }
    keepExpandedAfterSelection={true}
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onInputValueChange={[Function]}
    onSelectionAdd={[MockFunction]}
    selectOnTab={true}
    suggestionToString={[Function]}
    suggestions={
      Array [
        Object {
          "name": "Moon",
        },
        Object {
          "name": "Mercury",
        },
        Object {
          "name": "Venus",
        },
        Object {
          "name": "Earth",
        },
        Object {
          "name": "Mars",
        },
        Object {
          "name": "Jupiter",
        },
        Object {
          "name": "Saturn",
        },
        Object {
          "name": "Neptune",
        },
        Object {
          "disabled": true,
          "name": "Pluto",
        },
      ]
    }
  >
    <div
      className="SelectBase"
    >
      <Downshift
        defaultHighlightedIndex={-1}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue="driver"
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-labelledby="downshift-5-label"
          aria-owns="downshift-5-menu"
          className="SelectBase__main SelectBase__main--focused"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearLabel=""
            isArrowUp={true}
            isFocused={true}
            onClear={[Function]}
            onClick={[Function]}
            showArrow={false}
            showClearButton={false}
          >
            <div
              className="FieldWrapper FieldWrapper--isFocused SelectBase__field"
              onClick={[Function]}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  className="Autosuggest__wrapper Autosuggest__wrapper--isFocused"
                >
                  <input
                    aria-activedescendant="downshift-5-item-0"
                    aria-autocomplete="list"
                    aria-controls="downshift-5-menu"
                    aria-labelledby="downshift-5-label"
                    autoComplete="off"
                    className="Autosuggest__input"
                    data-lpignore={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="type here..."
                    value="driver"
                  />
                </div>
                <List
                  aria-labelledby="downshift-5-label"
                  className="SelectBase__list--focused"
                  id="downshift-5-menu"
                  isControlledNavigation={true}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-5-label"
                    className="List SelectBase__list--focused"
                    id="downshift-5-menu"
                    role="listbox"
                  >
                    <SuggestionsList
                      allowMixingSuggestionsAndLoading={false}
                      className="List__item"
                      getItemProps={[Function]}
                      highlightedIndex={0}
                      inputValue="driver"
                      isLoading={false}
                      key=".0"
                      noSuggestionsPlaceholder=""
                      passDisabledToListItems={true}
                      suggestionToKey={null}
                      suggestionToString={[Function]}
                      suggestions={
                        Array [
                          Object {
                            "name": "Moon",
                          },
                          Object {
                            "name": "Mercury",
                          },
                          Object {
                            "name": "Venus",
                          },
                          Object {
                            "name": "Earth",
                          },
                          Object {
                            "name": "Mars",
                          },
                          Object {
                            "name": "Jupiter",
                          },
                          Object {
                            "name": "Saturn",
                          },
                          Object {
                            "name": "Neptune",
                          },
                          Object {
                            "disabled": true,
                            "name": "Pluto",
                          },
                        ]
                      }
                      useOptimizeRender={false}
                    >
                      <ListItem
                        aria-selected={true}
                        disabled={false}
                        id="downshift-5-item-0"
                        isHighlighted={true}
                        key="Moon"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={true}
                          className="ListItem ListItem--isHighlighted ListItem--clickable"
                          disabled={false}
                          id="downshift-5-item-0"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker="driver"
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Moon
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-5-item-1"
                        isHighlighted={false}
                        key="Mercury"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-5-item-1"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker="driver"
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Mercury
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-5-item-2"
                        isHighlighted={false}
                        key="Venus"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-5-item-2"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker="driver"
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Venus
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-5-item-3"
                        isHighlighted={false}
                        key="Earth"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-5-item-3"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker="driver"
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Earth
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-5-item-4"
                        isHighlighted={false}
                        key="Mars"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-5-item-4"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker="driver"
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Mars
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-5-item-5"
                        isHighlighted={false}
                        key="Jupiter"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-5-item-5"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker="driver"
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Jupiter
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-5-item-6"
                        isHighlighted={false}
                        key="Saturn"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-5-item-6"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker="driver"
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Saturn
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-5-item-7"
                        isHighlighted={false}
                        key="Neptune"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-5-item-7"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker="driver"
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Neptune
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={true}
                        id="downshift-5-item-8"
                        isHighlighted={false}
                        key="Pluto"
                        onMouseDown={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--disabled"
                          disabled={true}
                          id="downshift-5-item-8"
                          onMouseDown={[Function]}
                          role="presentation"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker="driver"
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Pluto
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                    </SuggestionsList>
                  </ul>
                </List>
              </div>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</Autosuggest>
`;

exports[`Autosuggest rendering should render isLoading state 1`] = `
<Autosuggest
  allowMixingSuggestionsAndLoading={false}
  inputAttrs={Object {}}
  inputPlaceholder="type here..."
  isLoading={true}
  noSuggestionsPlaceholder=""
  numberOfVisibleTags={3}
  onBlur={[MockFunction]}
  onInputValueChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "driver",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onSelectionAdd={[MockFunction]}
  onSelectionRemove={[MockFunction]}
  onSubmit={null}
  selectedSuggestions={Array []}
  suggestionToKey={null}
  suggestionToString={[Function]}
  suggestions={Array []}
  useOptimizeListRender={false}
>
  <SelectBase
    blurredRenderer={[Function]}
    clearInputAfterSelection={true}
    focusedRenderer={[Function]}
    highlightOnEmptyInput={false}
    inputRef={
      Object {
        "current": <input
          aria-activedescendant="downshift-6-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-6-menu"
          aria-labelledby="downshift-6-label"
          autocomplete="off"
          class="Autosuggest__input"
          data-lpignore="true"
          placeholder="type here..."
          value="driver"
        />,
      }
    }
    keepExpandedAfterSelection={true}
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onInputValueChange={[Function]}
    onSelectionAdd={[MockFunction]}
    selectOnTab={true}
    suggestionToString={[Function]}
    suggestions={Array []}
  >
    <div
      className="SelectBase"
    >
      <Downshift
        defaultHighlightedIndex={-1}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue="driver"
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-labelledby="downshift-6-label"
          aria-owns="downshift-6-menu"
          className="SelectBase__main SelectBase__main--focused"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearLabel=""
            isArrowUp={true}
            isFocused={true}
            onClear={[Function]}
            onClick={[Function]}
            showArrow={false}
            showClearButton={false}
          >
            <div
              className="FieldWrapper FieldWrapper--isFocused SelectBase__field"
              onClick={[Function]}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  className="Autosuggest__wrapper Autosuggest__wrapper--isFocused"
                >
                  <input
                    aria-activedescendant="downshift-6-item-0"
                    aria-autocomplete="list"
                    aria-controls="downshift-6-menu"
                    aria-labelledby="downshift-6-label"
                    autoComplete="off"
                    className="Autosuggest__input"
                    data-lpignore={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="type here..."
                    value="driver"
                  />
                </div>
                <List
                  aria-labelledby="downshift-6-label"
                  className="SelectBase__list--focused"
                  id="downshift-6-menu"
                  isControlledNavigation={true}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-6-label"
                    className="List SelectBase__list--focused"
                    id="downshift-6-menu"
                    role="listbox"
                  >
                    <SuggestionsList
                      allowMixingSuggestionsAndLoading={false}
                      className="List__item"
                      getItemProps={[Function]}
                      highlightedIndex={0}
                      inputValue="driver"
                      isLoading={true}
                      key=".0"
                      noSuggestionsPlaceholder=""
                      passDisabledToListItems={true}
                      suggestionToKey={null}
                      suggestionToString={[Function]}
                      suggestions={Array []}
                      useOptimizeRender={false}
                    >
                      <ListItem
                        key="0"
                      >
                        <li
                          className="ListItem"
                          role="presentation"
                        >
                          <div
                            className="SuggestionsList__loaderItem"
                            key=".0"
                          >
                            <ContentPlaceholder>
                              <div
                                className="ContentPlaceholder"
                                style={
                                  Object {
                                    "animationDuration": "1s",
                                    "height": undefined,
                                  }
                                }
                              >
                                 
                                <div
                                  className="ContentPlaceholder__mask"
                                  style={
                                    Object {
                                      "width": "0%",
                                    }
                                  }
                                />
                              </div>
                            </ContentPlaceholder>
                          </div>
                        </li>
                      </ListItem>
                      <ListItem
                        key="1"
                      >
                        <li
                          className="ListItem"
                          role="presentation"
                        >
                          <div
                            className="SuggestionsList__loaderItem"
                            key=".0"
                          >
                            <ContentPlaceholder>
                              <div
                                className="ContentPlaceholder"
                                style={
                                  Object {
                                    "animationDuration": "1s",
                                    "height": undefined,
                                  }
                                }
                              >
                                 
                                <div
                                  className="ContentPlaceholder__mask"
                                  style={
                                    Object {
                                      "width": "0%",
                                    }
                                  }
                                />
                              </div>
                            </ContentPlaceholder>
                          </div>
                        </li>
                      </ListItem>
                      <ListItem
                        key="2"
                      >
                        <li
                          className="ListItem"
                          role="presentation"
                        >
                          <div
                            className="SuggestionsList__loaderItem"
                            key=".0"
                          >
                            <ContentPlaceholder>
                              <div
                                className="ContentPlaceholder"
                                style={
                                  Object {
                                    "animationDuration": "1s",
                                    "height": undefined,
                                  }
                                }
                              >
                                 
                                <div
                                  className="ContentPlaceholder__mask"
                                  style={
                                    Object {
                                      "width": "0%",
                                    }
                                  }
                                />
                              </div>
                            </ContentPlaceholder>
                          </div>
                        </li>
                      </ListItem>
                      <ListItem
                        key="3"
                      >
                        <li
                          className="ListItem"
                          role="presentation"
                        >
                          <div
                            className="SuggestionsList__loaderItem"
                            key=".0"
                          >
                            <ContentPlaceholder>
                              <div
                                className="ContentPlaceholder"
                                style={
                                  Object {
                                    "animationDuration": "1s",
                                    "height": undefined,
                                  }
                                }
                              >
                                 
                                <div
                                  className="ContentPlaceholder__mask"
                                  style={
                                    Object {
                                      "width": "0%",
                                    }
                                  }
                                />
                              </div>
                            </ContentPlaceholder>
                          </div>
                        </li>
                      </ListItem>
                      <ListItem
                        key="4"
                      >
                        <li
                          className="ListItem"
                          role="presentation"
                        >
                          <div
                            className="SuggestionsList__loaderItem"
                            key=".0"
                          >
                            <ContentPlaceholder>
                              <div
                                className="ContentPlaceholder"
                                style={
                                  Object {
                                    "animationDuration": "1s",
                                    "height": undefined,
                                  }
                                }
                              >
                                 
                                <div
                                  className="ContentPlaceholder__mask"
                                  style={
                                    Object {
                                      "width": "0%",
                                    }
                                  }
                                />
                              </div>
                            </ContentPlaceholder>
                          </div>
                        </li>
                      </ListItem>
                    </SuggestionsList>
                  </ul>
                </List>
              </div>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</Autosuggest>
`;

exports[`Autosuggest rendering should show "no suggestions" placeholder only if input has value 1`] = `
<Autosuggest
  allowMixingSuggestionsAndLoading={false}
  inputAttrs={Object {}}
  inputPlaceholder="type here..."
  isLoading={false}
  noSuggestionsPlaceholder="no suggestions"
  numberOfVisibleTags={3}
  onBlur={[MockFunction]}
  onInputValueChange={[MockFunction]}
  onSelectionAdd={[MockFunction]}
  onSelectionRemove={[MockFunction]}
  onSubmit={null}
  selectedSuggestions={Array []}
  suggestionToKey={null}
  suggestionToString={[Function]}
  suggestions={Array []}
  useOptimizeListRender={false}
>
  <SelectBase
    blurredRenderer={[Function]}
    clearInputAfterSelection={true}
    focusedRenderer={[Function]}
    highlightOnEmptyInput={false}
    inputRef={
      Object {
        "current": <input
          aria-autocomplete="list"
          aria-controls="downshift-15-menu"
          aria-labelledby="downshift-15-label"
          autocomplete="off"
          class="Autosuggest__input"
          data-lpignore="true"
          placeholder="type here..."
          value=""
        />,
      }
    }
    keepExpandedAfterSelection={true}
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onInputValueChange={[Function]}
    onSelectionAdd={[MockFunction]}
    selectOnTab={true}
    suggestionToString={[Function]}
    suggestions={Array []}
  >
    <div
      className="SelectBase"
    >
      <Downshift
        defaultHighlightedIndex={-1}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue=""
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-labelledby="downshift-15-label"
          aria-owns="downshift-15-menu"
          className="SelectBase__main SelectBase__main--focused"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearLabel=""
            isArrowUp={true}
            isFocused={true}
            onClear={[Function]}
            onClick={[Function]}
            showArrow={false}
            showClearButton={false}
          >
            <div
              className="FieldWrapper FieldWrapper--isFocused SelectBase__field"
              onClick={[Function]}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  className="Autosuggest__wrapper Autosuggest__wrapper--isFocused"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-controls="downshift-15-menu"
                    aria-labelledby="downshift-15-label"
                    autoComplete="off"
                    className="Autosuggest__input"
                    data-lpignore={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="type here..."
                    value=""
                  />
                </div>
                <List
                  aria-labelledby="downshift-15-label"
                  className="SelectBase__list--focused"
                  id="downshift-15-menu"
                  isControlledNavigation={true}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-15-label"
                    className="List SelectBase__list--focused"
                    id="downshift-15-menu"
                    role="listbox"
                  />
                </List>
              </div>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</Autosuggest>
`;

exports[`Autosuggest rendering should show "no suggestions" placeholder only if input has value 2`] = `
<Autosuggest
  allowMixingSuggestionsAndLoading={false}
  inputAttrs={Object {}}
  inputPlaceholder="type here..."
  isLoading={false}
  noSuggestionsPlaceholder="no suggestions"
  numberOfVisibleTags={3}
  onBlur={[MockFunction]}
  onInputValueChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "a",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onSelectionAdd={[MockFunction]}
  onSelectionRemove={[MockFunction]}
  onSubmit={null}
  selectedSuggestions={Array []}
  suggestionToKey={null}
  suggestionToString={[Function]}
  suggestions={Array []}
  useOptimizeListRender={false}
>
  <SelectBase
    blurredRenderer={[Function]}
    clearInputAfterSelection={true}
    focusedRenderer={[Function]}
    highlightOnEmptyInput={false}
    inputRef={
      Object {
        "current": <input
          aria-activedescendant="downshift-15-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-15-menu"
          aria-labelledby="downshift-15-label"
          autocomplete="off"
          class="Autosuggest__input"
          data-lpignore="true"
          placeholder="type here..."
          value="a"
        />,
      }
    }
    keepExpandedAfterSelection={true}
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onInputValueChange={[Function]}
    onSelectionAdd={[MockFunction]}
    selectOnTab={true}
    suggestionToString={[Function]}
    suggestions={Array []}
  >
    <div
      className="SelectBase"
    >
      <Downshift
        defaultHighlightedIndex={-1}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue="a"
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-labelledby="downshift-15-label"
          aria-owns="downshift-15-menu"
          className="SelectBase__main SelectBase__main--focused"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearLabel=""
            isArrowUp={true}
            isFocused={true}
            onClear={[Function]}
            onClick={[Function]}
            showArrow={false}
            showClearButton={false}
          >
            <div
              className="FieldWrapper FieldWrapper--isFocused SelectBase__field"
              onClick={[Function]}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  className="Autosuggest__wrapper Autosuggest__wrapper--isFocused"
                >
                  <input
                    aria-activedescendant="downshift-15-item-0"
                    aria-autocomplete="list"
                    aria-controls="downshift-15-menu"
                    aria-labelledby="downshift-15-label"
                    autoComplete="off"
                    className="Autosuggest__input"
                    data-lpignore={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="type here..."
                    value="a"
                  />
                </div>
                <List
                  aria-labelledby="downshift-15-label"
                  className="SelectBase__list--focused"
                  id="downshift-15-menu"
                  isControlledNavigation={true}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-15-label"
                    className="List SelectBase__list--focused"
                    id="downshift-15-menu"
                    role="listbox"
                  >
                    <SuggestionsList
                      allowMixingSuggestionsAndLoading={false}
                      className="List__item"
                      getItemProps={[Function]}
                      highlightedIndex={0}
                      inputValue="a"
                      isLoading={false}
                      key=".0"
                      noSuggestionsPlaceholder="no suggestions"
                      passDisabledToListItems={true}
                      suggestionToKey={null}
                      suggestionToString={[Function]}
                      suggestions={Array []}
                      useOptimizeRender={false}
                    >
                      <ListItem
                        disabled={true}
                      >
                        <li
                          className="ListItem ListItem--disabled"
                          role="presentation"
                        >
                          <Text
                            context="muted"
                            key=".0"
                          >
                            <p
                              className="Text--context_muted"
                            >
                              no suggestions
                            </p>
                          </Text>
                        </li>
                      </ListItem>
                    </SuggestionsList>
                  </ul>
                </List>
              </div>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</Autosuggest>
`;

exports[`Autosuggest rendering should show "no suggestions" placeholder only if input has value 3`] = `
<Autosuggest
  allowMixingSuggestionsAndLoading={false}
  inputAttrs={Object {}}
  inputPlaceholder="type here..."
  isLoading={false}
  noSuggestionsPlaceholder="no suggestions"
  numberOfVisibleTags={3}
  onBlur={[MockFunction]}
  onInputValueChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "a",
        ],
        Array [
          "",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onSelectionAdd={[MockFunction]}
  onSelectionRemove={[MockFunction]}
  onSubmit={null}
  selectedSuggestions={Array []}
  suggestionToKey={null}
  suggestionToString={[Function]}
  suggestions={Array []}
  useOptimizeListRender={false}
>
  <SelectBase
    blurredRenderer={[Function]}
    clearInputAfterSelection={true}
    focusedRenderer={[Function]}
    highlightOnEmptyInput={false}
    inputRef={
      Object {
        "current": <input
          aria-autocomplete="list"
          aria-controls="downshift-15-menu"
          aria-labelledby="downshift-15-label"
          autocomplete="off"
          class="Autosuggest__input"
          data-lpignore="true"
          placeholder="type here..."
          value=""
        />,
      }
    }
    keepExpandedAfterSelection={true}
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onInputValueChange={[Function]}
    onSelectionAdd={[MockFunction]}
    selectOnTab={true}
    suggestionToString={[Function]}
    suggestions={Array []}
  >
    <div
      className="SelectBase"
    >
      <Downshift
        defaultHighlightedIndex={-1}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue=""
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-labelledby="downshift-15-label"
          aria-owns="downshift-15-menu"
          className="SelectBase__main SelectBase__main--focused"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearLabel=""
            isArrowUp={true}
            isFocused={true}
            onClear={[Function]}
            onClick={[Function]}
            showArrow={false}
            showClearButton={false}
          >
            <div
              className="FieldWrapper FieldWrapper--isFocused SelectBase__field"
              onClick={[Function]}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  className="Autosuggest__wrapper Autosuggest__wrapper--isFocused"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-controls="downshift-15-menu"
                    aria-labelledby="downshift-15-label"
                    autoComplete="off"
                    className="Autosuggest__input"
                    data-lpignore={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="type here..."
                    value=""
                  />
                </div>
                <List
                  aria-labelledby="downshift-15-label"
                  className="SelectBase__list--focused"
                  id="downshift-15-menu"
                  isControlledNavigation={true}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-15-label"
                    className="List SelectBase__list--focused"
                    id="downshift-15-menu"
                    role="listbox"
                  />
                </List>
              </div>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</Autosuggest>
`;
